<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SecondActivity" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="ExtraText" >
        
        <TextView
            android:id="@+id/osctitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="30dp"
            android:text="@string/osctitle"
            android:textSize="20sp" />

"

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        
        <TextView 
            android:id="@+id/oschost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oschost"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone" >

            <requestFocus />
        </EditText>
        
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        
        <TextView 
            android:id="@+id/oscportout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oscportout"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />
        
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        
         <TextView 
            android:id="@+id/oscportin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:text="@string/oscportin"
             android:textSize="18sp" />

         <EditText
             android:id="@+id/editText3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="number" 
             />
        
    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
         
         <TextView 
            android:id="@+id/localip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/localip"
            android:textSize="18sp" />

         <EditText
             android:id="@+id/editText4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="phone" />
        
    </TableRow>

</TableLayout>